# re-agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  configuration.md  getting-started.md
openspec/: config.yaml
src/re_agent/: __init__.py  __main__.py
src/re_agent/adapters/: __init__.py  (+2 more)
tests/: conftest.py  test_analysis_ghidra.py  test_analysis_offline_export.py  test_project_provisioning.py  test_project_publish.py  test_project_snapshot.py  test_toolchain_profile.py  test_transform_budget_e2e.py  test_version_consistency.py
tests/adapters/: __init__.py  test_contracts.py  test_execution.py
tests/cli/: test_promote.py  test_run.py  test_run_windows.py
tests/contracts/: test_manifest.py  test_model.py  test_validation.py
tests/fixtures/: sample_config.yaml  test_abi_manifest.json
tests/llm/: test_claude_retry.py  test_codex_token_accounting.py  test_openai_compat_cache_metrics.py  test_provider_usage_normalization.py  test_replay.py
tests/promotion/: test_build_evidence_linkage.py  test_lock_concurrency.py  test_models_store_journal.py  test_service.py
tests/reverse/: test_block_compile_gate.py  test_block_fallback.py  test_budget_guard.py  test_compile_gate.py  test_decompile_lru.py  test_few_shot_min_score.py  test_parity_cache.py  test_prompt_ordering.py  test_source_context_cache.py  test_stagnation_objective.py  test_stitch_failfast.py  test_var_map_narrowing.py
tests/state/: test_function_state.py
tests/test_agents/: test_block_optimize.py  test_checker_optimize.py  test_loop.py  test_reverser_optimize.py  test_source_context.py
tests/test_backend/: test_ghidra_bridge.py
tests/test_cli/: test_main.py
tests/test_common/: test_compiler.py  test_normalize.py
tests/test_config/: test_loader.py
tests/test_core/: test_function_picker.py  test_models.py  test_pipeline_profile.py
tests/test_llm/: test_protocol.py  test_provider_retry.py
tests/test_orchestrator/: test_single.py
tests/test_parity/: test_engine.py  test_scoring.py  test_signals.py  test_source_indexer.py
tests/test_utils/: test_text.py
tests/verify/: test_differential.py
(+153 files in other folders)
