[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "re-agent"
version = "2.0.0"
description = "Autonomous reverse-engineering agent with a source-aware reverser/checker loop, objective verification, parity checks, and a Ghidra backend"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Dryxio" }]
keywords = ["reverse-engineering", "ghidra", "llm", "autonomous-agent", "binary-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Disassemblers",
]
dependencies = [
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "openai>=1.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
ghidra-bridge = ["ghidra-ai-bridge>=0.1.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff==0.15.21", "mypy>=1.13", "pre-commit>=3.7"]

[project.scripts]
re-agent = "re_agent.cli.main:main"

[project.urls]
Homepage = "https://github.com/Spoutnik87/re-agent"
Repository = "https://github.com/Spoutnik87/re-agent"
Issues = "https://github.com/Spoutnik87/re-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/re_agent"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["anthropic.*", "openai.*", "jinja2", "sklearn.*", "dotenv"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", ".venv", "__pycache__"]
markers = [
    "llm: tests that require LLM API keys",
    "ghidra: tests that require ghidra-ai-bridge",
]


